--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:label="@string/title_activity_noise"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
-            android:name=".NoiseSetupPage"
+            android:name=".NoiseSetup"
             android:label="Setup Record Time"
             android:theme="@style/AppTheme.NoActionBar"/>
     </application>
